# DCSL-semester-updates

Spring2018/Ranvijay-MixedPrecision/: README.txt
Spring2018/Ranvijay-MixedPrecision/llvmdataflow/: CMakeLists.txt  STAModel.cpp  STAModel.hpp  _Z17CalcMinDtOneBlockILi1024EEvPdS0_S0_S0_i  _Z29AddNodeForcesFromElems_kerneliiPKiS0_S0_PKdS2_S2_PdS3_S3_i  _Z30CalcVolumeForceForElems_kernelILb0EEvPKdS1_S1_S1_diiPKiS1_S1_S1_S1_S1_S1_S1_S1_PdS4_S4_Pii  _Z30CalcVolumeForceForElems_kernelILb1EEvPKdS1_S1_S1_diiPKiS1_S1_S1_S1_S1_S1_S1_S1_PdS4_S4_Pii  _Z31CalcAccelerationForNodes_kerneliPdS_S_S_S_S_S_  _Z34CalcTimeConstraintsForElems_kernelILi128EEviddPiPdS1_S1_S1_S1_  _Z35CalcMonotonicQRegionForElems_kerneldddddiPiS_S_S_S_S_S_S_PdS0_S0_S0_S0_S0_S0_S0_S0_S0_S0_S0_S0_dS_  _Z38CalcPositionAndVelocityForNodes_kerneliddPdS_S_S_S_S_PKdS1_S1_  _Z42CalcKinematicsAndMonotonicQGradient_kerneliidPKiPKdS2_S2_S2_S2_S2_S2_S2_PdS3_S3_S3_S3_S3_S3_S3_S3_S3_S3_S3_S3_Pii  _Z45ApplyMaterialPropertiesAndUpdateVolume_kernelidddPdS_S_S_dddddPiS_S_S_S_dS_dS0_iPKiS2_i  _Z50ApplyAccelerationBoundaryConditionsForNodes_kerneliPdPi  demo_error.cpp  demo_score.cpp  get_children.cpp  model.cpp  run.sh
Spring2018/Ranvijay-MixedPrecision/llvmdataflow/test/: Makefile  test1.c  test2.c
